[package]
name = "kong_kontrollers"
version = "0.1.0"
edition = "2021"

[features]
accounts = []
login = ["accounts"]
blog = ["login"]
newsletter = []

[dependencies]
kong = { path = "../kong/"}
serde = { version = "1.0.144", features = ["derive"] } # A generic serialization/deserialization framework
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"]} #  Ergonomic wrapper for SQLite
chrono = { version = "0.4.23", features = ["serde"]} # Date and time library