[package]
name = "kong_kontrollers"
version = "0.1.0"
edition = "2021"

[features]
accounts = []
login = ["accounts"]
blog = ["login"]
newsletter = []
contact = []
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres"]

[dependencies]
kong = { git = "https://github.com/kong-framework/kong.git"}
serde = { version = "1.0.144", features = ["derive"] } # A generic serialization/deserialization framework
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"], optional = true} #  Ergonomic wrapper for SQLite
chrono = { version = "0.4.23", features = ["serde"]} # Date and time library
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true} # A native, synchronous PostgreSQL client